[package]
name = "rsa_vis"
version = "0.1.0"
authors = ["Ariel Young <arielyoung103@gmail.com>", "Nashir Janmohamed <nashirbass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num = { version = "0.2.1", features = ["serde"] }